--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,15 @@
 <resources>
     <!-- Base application theme. -->
+
     <style name="AppTheme"
+        parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:statusBarColor">@color/colorPrimary</item>
+    </style>
+
+    <style name="SettingsTheme"
         parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:statusBarColor">@color/colorPrimary</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -14,10 +18,12 @@
     </style>
 
     <style name="AppTheme.AppBarOverlay"
-        parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+        parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+    </style>
 
     <style name="AppTheme.PopupOverlay"
-        parent="ThemeOverlay.AppCompat.Light" />
+        parent="ThemeOverlay.AppCompat.Light">
+    </style>
 
     <style name="EditTextColorControl">
         <item name="colorControlNormal">@color/colorWhite</item>
@@ -25,9 +31,11 @@
     </style>
 
     <style name="MyCheckBox" parent="Theme.AppCompat.Light">
-        <!-- 枠線 -->
+        <!-- 枠線の色 -->
         <item name="colorControlNormal">@color/colorWhite</item>
-        <!-- チェック時の色 -->
+        <!-- チェック中の色 -->
+        <item name="colorControlHighlight">@color/colorWhite</item>
+        <!-- チェック後の色 -->
         <item name="colorControlActivated">@color/colorPrimary</item>
     </style>
 
